wp_derive/tests/error_empty_result.rs
use wp_derive::WPContextual;

#[derive(WPContextual)]
pub struct SparseFoo {}

fn main() {}

uniffi::setup_scaffolding!();
